--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <title>Jumping Loading</title>
 </head>
 <body>
@@ -13,5 +14,16 @@
         <div class="circle"></div>
         <div class="circle"></div>
     </div>
+    <div>
+        <input type="checkbox" class="checkbox" id="checkbox">
+        <label for="checkbox" class="label">
+            <i class='bx bxs-moon moon'></i>
+            <i class='bx bxs-sun sun'></i>
+            <div class="ball"></div>
+        </label>
+    </div>
+
+    <script src="https://unpkg.com/boxicons@2.0.9/dist/boxicons.js"></script> 
+    <script src="script.js"></script>
 </body>
 </html>
